<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_search"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kryptx.app"
            android:targetClass="com.kryptx.app.MainActivity">
            <extra android:name="navigate_target" android:value="search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_add_item"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_add"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kryptx.app"
            android:targetClass="com.kryptx.app.MainActivity">
            <extra android:name="navigate_target" android:value="add_item" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_generator"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_generator"
        android:shortcutLongLabel="@string/shortcut_generator_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kryptx.app"
            android:targetClass="com.kryptx.app.MainActivity">
            <extra android:name="navigate_target" android:value="generator" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="shortcut_totp"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_totp"
        android:shortcutLongLabel="@string/shortcut_totp_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.kryptx.app"
            android:targetClass="com.kryptx.app.MainActivity">
            <extra android:name="navigate_target" android:value="totp" />
        </intent>
    </shortcut>
</shortcuts>
